@@ -1,6 +1,6 @@
 {
   "name": "simp-compliance_markup",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "author": "SIMP Team",
   "summary": "Compliance-mapping annotation for Puppet code",
   "license": "Apache-2.0",
