@@ -1,3 +1,6 @@
+* Mon Nov 02 2020 Andy Adrian <andy.adrian@onyxpoint.com> - 3.1.4-0
+- Remove unused and broken telemetry functionality
+
 * Mon Nov 02 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.3-0
 - Add missing `nil` check when merging controls, identifiers, and oval-ids
 - Add `warn` and `debug` in outer `begin` block to avoid silent failures
